--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pytest-pylint = "*"
 
 [packages]
 fastapi = "*"
+gunicorn = "*"
 sqlalchemy = "*"
 typing-extensions = "*"
 uvicorn = {extras = ["standard"], version = "*"}
