--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .vscode/
 .env
 venv/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
